--- a/Unelsoft.DataAccessFactory/Unelsoft.DataAccessFactory.vbproj
+++ b/Unelsoft.DataAccessFactory/Unelsoft.DataAccessFactory.vbproj
@@ -70,6 +70,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAHelper.vb" />
+    <Compile Include="DALObjects.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
