--- a/Unelsoft.DataLayer/Unelsoft.DataLayer.vbproj
+++ b/Unelsoft.DataLayer/Unelsoft.DataLayer.vbproj
@@ -94,6 +94,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SalesDate\SalesDateDataLayer.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
