--- a/Unelsoft.AccessController/My Project/Settings.settings
+++ b/Unelsoft.AccessController/My Project/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="My" GeneratedClassName="MySettings" UseMySettingsClassName="true">
   <Profiles />
   <Settings>
-    <Setting Name="ConnectionName" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Casa</Value>
+    <Setting Name="ConnectionName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
