--- a/Unelsoft.AccessController/app.config
+++ b/Unelsoft.AccessController/app.config
@@ -2,8 +2,8 @@
 <configuration>
 
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="Unelsoft.AccessController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Unelsoft.AccessController.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <system.diagnostics>
@@ -27,11 +27,11 @@
         </sharedListeners>
     </system.diagnostics>
 
-    <userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup><applicationSettings>
         <Unelsoft.AccessController.My.MySettings>
             <setting name="ConnectionName" serializeAs="String">
-                <value>Casa</value>
+                <value />
             </setting>
         </Unelsoft.AccessController.My.MySettings>
-    </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+    </applicationSettings>
+</configuration>
